--- a/ViagemImpacta/frontend/src/components/TravelSection.css
+++ b/ViagemImpacta/frontend/src/components/TravelSection.css
@@ -9,3 +9,15 @@
 }
 
 
+.cardSombra{
+  box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 50px;
+  top: 30px;
+  margin-left: 20px;
+  
+}
+
+.cardSombra:hover{
+  box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.2);
+   
+}
