--- a/ViagemImpacta/backend/ViagemImpacta/Views/Hotels/Create.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Hotels/Create.cshtml
@@ -1,5 +1,4 @@
 ﻿@model ViagemImpacta.Models.Hotel
-@using ViagemImpacta.Models.Enums;
 
 @{
     ViewData["Title"] = "Cadastrar Hotel";
@@ -86,7 +85,7 @@
         </div>
         <div class="form-group mb-2">
             <label>Tipo de Quarto</label>
-            <select name="Rooms[__index__].Type" class="form-control" asp-items="Html.GetEnumSelectList<RoomType>()"></select>
+            <select name="Rooms[__index__].Type" class="form-control" asp-items="Html.GetEnumSelectList<ViagemImpacta.Models.Enums.RoomType>()"></select>
         </div>
         <div class="form-group mb-2">
             <label>Preço Médio Diária</label>
