--- a/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Delete.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Delete.cshtml
@@ -84,10 +84,10 @@
             @Html.DisplayFor(model => model.CreatedAt)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RoomsPromotionalId)
+            @Html.DisplayNameFor(model => model.RoomsPromotional)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RoomsPromotionalId)
+            @Html.DisplayFor(model => model.RoomsPromotional)
         </dd>
     </dl>
     
