--- a/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Edit.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Edit.cshtml
@@ -73,11 +73,11 @@
                 <input asp-for="CreatedAt" class="form-control" />
                 <span asp-validation-for="CreatedAt" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="RoomsPromotionalId" class="control-label"></label>
                 <input asp-for="RoomsPromotionalId" class="form-control" />
                 <span asp-validation-for="RoomsPromotionalId" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
