--- a/ViagemImpacta/backend/ViagemImpacta/Views/Admins/Dashboard.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Admins/Dashboard.cshtml
@@ -31,6 +31,9 @@
                 <a asp-controller="Employees" asp-action="Index" class="list-group-item list-group-item-action"><span class="material-icons">badge</span> Funcionários</a>
                 <a asp-controller="Hotels" asp-action="Index" class="list-group-item list-group-item-action"><span class="material-icons">hotel</span> Hotéis</a>
                 <a asp-controller="Reservations" asp-action="Index" class="list-group-item list-group-item-action"><span class="material-icons">event</span> Reservas</a>
+                <a asp-controller="Promotions" asp-action="Index" class="list-group-item list-group-item-action">
+                    <span class="material-icons">local_offer</span> Promoções
+                </a>
                 <button class="list-group-item list-group-item-action" disabled><span class="material-icons">rate_review</span> Avaliações</button>
             </div>
         </aside>
