--- a/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Delete.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Delete.cshtml
@@ -31,7 +31,7 @@
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="HotelId" />
+        <input type="hidden" asp-for="PromotionId" />
         <input type="submit" value="Excluir" class="btn btn-danger" />
         <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
