Feat: Implementando Confirmacao de Reservas do Promotion

--- a/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Details.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Details.cshtml
@@ -23,7 +23,7 @@
             <dt class="col-sm-4">Hotel</dt>
             <dd class="col-sm-8">@Model.Hotel?.Name</dd>
             <dt class="col-sm-4">Preço Final</dt>
-            <dd class="col-sm-8">@Model.FinalPrice.ToString("C", new System.Globalization.CultureInfo("pt-BR"))</dd>
+            <dd class="col-sm-8">@Model.TotalPrice.ToString("C", new System.Globalization.CultureInfo("pt-BR"))</dd>
             <dt class="col-sm-4">Preço Original</dt>
             <dd class="col-sm-8">@Model.OriginalPrice.ToString("C", new System.Globalization.CultureInfo("pt-BR"))</dd>
             <dt class="col-sm-4">Desconto (%)</dt>
