--- a/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Index.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Promotions/Index.cshtml
@@ -51,7 +51,7 @@
                     <td>@item.CheckIn.ToString("dd/MM/yyyy")</td>
                     <td>@item.CheckOut.ToString("dd/MM/yyyy")</td>
                     <td>@item.OriginalPrice.ToString("C")</td>
-                    <td>@item.FinalPrice.ToString("C")</td>
+                    <td>@item.TotalPrice.ToString("C")</td>
                     <td>@((item.DiscountPercentage / 100).ToString("P"))</td>
                     <td>
                         @if (item.IsActive && item.EndDate >= DateTime.Now)
